Another tweak for wide diffs: there *is* a CSS 3 draft property (word-wrap: break-word) which can force long words to break instead of just the scrolling hackaround. Yay! Still no love in Firefox or Opera, but fixes Internet Explorer and Safari.
works in:
	Safari 2.0.4
	MSIE 7.0/Win
	MSIE 6.0/Win
	MSIE 5.2/Mac
doesn't work in:
	Opera 9.20
	Firefox 2.0.3
	Konqueror 3.5.6
	iCab (wraps at punctuation but not in mid-word)

--- a/skins/common/diff.css
+++ b/skins/common/diff.css
@@ -48,7 +48,12 @@ table.diff col.diff-content {
 	width: 48%;
 }
 table.diff td div {
-	/* Scrollbars will be added for very wide cells
+	/* Force-wrap very long lines such as URLs or page-widening char strings.
+	   CSS 3 draft..., but Gecko doesn't support it yet:
+	   https://bugzilla.mozilla.org/show_bug.cgi?id=99457 */
+	word-wrap: break-word;
+	
+	/* As fallback, scrollbars will be added for very wide cells
 	   instead of text overflowing or widening */
 	overflow: auto;
 }
